--- a/css/theme.css
+++ b/css/theme.css
@@ -8,6 +8,8 @@ html {
 	background-size: 100% 100px;
 	
 	font-family: 'Poppins', 'Liberation Sans', 'Arial', sans-seif;
+	
+	overflow: hidden;
 }
 
 body {
